Add background image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 <title>Always make new mistakes</title>
+<style>
+body {
+    background-image: url("images/Priestley_Joseph_pneumatic_trough.jpg");
+    background-color: #ffffff;
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+</style>
 </head>
 <body>
 <h2>Always make</h2>
